--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@realm/react": "^0.4.3",
+    "@types/react": "~18.0.27",
     "expo": "~48.0.10",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.6"
+    "react-native": "0.71.6",
+    "realm": "^11.8.0",
+    "typescript": "^4.9.4",
+    "expo-random": "~13.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react-native": "^0.71.5"
   },
   "private": true
 }
